test/sema/nontransitive-mutable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct Foo {
    var a: int
}

func bar(foo: Foo*) {
    // CHECK: [[@LINE+1]]:11: error: cannot assign to immutable variable 'a'
    foo.a = 42
}
